Bug 92543 - BandRect.mFrames should be created as an nsAutoVoidArray p=alfredkayser@nl.ibm.com (Alfred Kayser) r+sr=roc@ocallahan.org (Robert O'Callahan) a=dbaron@mozilla.com (David Baron)